--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.474.0",
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.0",
     "motion": "^12.3.1",
     "next": "15.1.6",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5",
-    "tailwind-merge": "^3.0.1"
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
