--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "gsap": "^3.12.7",
     "lucide-react": "^0.474.0",
     "mongodb": "^6.13.0",
